# arrvox

./: CLAUDE.md  Cargo.toml
crates/arvx-animation/: Cargo.toml
crates/arvx-animation/src/: blend_shape.rs  character.rs  clip.rs  lib.rs  player.rs  skeleton.rs  skeleton_asset.rs
crates/arvx-convert/: Cargo.toml
crates/arvx-convert/src/: main.rs
crates/arvx-core/: Cargo.toml
crates/arvx-core/examples/: mesh_bench.rs
crates/arvx-core/src/: brick_face_links.rs  brick_pool.rs  cluster_mesh_data.rs  constants.rs  dirty_ranges.rs  laplacian_smooth.rs  leaf_attr_overlay.rs  leaf_attr_pool.rs  lib.rs  material_ref.rs  mesh_cluster.rs  mesh_extract.rs  mesh_lod.rs  mesh_test_bench.rs  octree_allocator.rs  sculpt.rs  sculpt_overlay.rs  sdf_primitive.rs  snapshot_vec.rs  world_position.rs
crates/arvx-core/tests/: occupancy_limits.rs  sculpt_double_sheet.rs
crates/arvx-editor/: Cargo.toml
crates/arvx-editor/src/: main.rs
crates/arvx-engine/: Cargo.toml
crates/arvx-engine/examples/: scaffold_splat5.rs
crates/arvx-engine/src/: animation.rs  bake_worker.rs  camera.rs  command.rs  components.rs  console.rs  environment.rs  file_watcher.rs  gameplay_loader.rs  gizmo.rs  import_profile.rs  import_worker.rs  inspector.rs  lib.rs  material_library.rs  procedural_snapshot.rs  profiling.rs  project.rs  recent_projects.rs  render_frame.rs  render_worker.rs  scaffold.rs  scene_io.rs  scene_sync.rs  snapshot.rs  terrain_state.rs  viewport.rs  wireframe_builders.rs
crates/arvx-engine/tests/: headless_editor_path.rs  material_shader_params.rs  material_shader_resolution.rs
crates/arvx-import/: Cargo.toml
crates/arvx-import/src/: config.rs  error.rs  event.rs  lib.rs  normalize.rs
crates/arvx-import/tests/: fbx_skinning.rs  pipeline.rs
crates/arvx-procedural/: Cargo.toml
crates/arvx-procedural/src/: bounds.rs  lib.rs  version.rs
crates/arvx-regions/: Cargo.toml
crates/arvx-regions/src/: bvh.rs  falloff.rs  index.rs  lib.rs  region.rs  shape.rs
crates/arvx-runtime/: Cargo.toml
crates/arvx-runtime/src/: lib.rs
crates/arvx-terrain/: Cargo.toml
crates/arvx-terrain/examples/: bake_one_tile.rs  fix_radius_sweep.rs  sculpt_geom_truth.rs  smooth_stairs_repro.rs  terrain_geom_truth.rs
crates/arvx-terrain/src/: bake.rs  baked_tile.rs  biome_region.rs  bounds.rs  fbm.rs  lib.rs  persist.rs  physics_policy.rs  region_snapshot.rs  repro.rs  sculpt_diff.rs  sculpt_diff_persist.rs  stamp.rs  stamp_index.rs  streamer.rs  terrain.rs  terrain_fn.rs  terrain_fn_spec.rs  tile_collider_mesh.rs  tile_key.rs  tile_tag.rs  value_noise.rs  worker.rs
crates/arvx-terrain/tests/: cluster_dissect.rs  terrain_geometry_validation.rs
crates/arvx-testbed/: Cargo.toml
crates/arvx-testbed/src/: main.rs
crates/rkp-animation/: Cargo.toml
crates/rkp-animation/src/: blend_shape.rs  character.rs  lib.rs  player.rs  skeleton.rs  skeleton_asset.rs
crates/rkp-convert/: Cargo.toml
crates/rkp-convert/src/: main.rs
crates/rkp-core/: Cargo.toml
crates/rkp-core/src/: asset_file.rs  brick_face_links.rs  brick_map.rs  brick_pool.rs  cluster_mesh_data.rs  companion.rs  constants.rs  dirty_ranges.rs  laplacian_smooth.rs  leaf_attr.rs  leaf_attr_overlay.rs  leaf_attr_pool.rs  lib.rs  marching_cubes.rs  mesh_cluster.rs  mesh_extract.rs  mesh_lod.rs  octree_allocator.rs  opacity_shaders_cpu.rs  prefilter.rs  scene_node.rs  sculpt.rs  sculpt_overlay.rs  sdf_primitive.rs  sparse_octree.rs  splat_voxel.rs  voxel.rs  voxel_pool.rs  voxelize_octree.rs  voxelize_opacity.rs  world_position.rs
crates/rkp-editor/: Cargo.toml
crates/rkp-editor/src/: main.rs
crates/rkp-engine/: Cargo.toml
crates/rkp-engine/examples/: scaffold_splat5.rs
crates/rkp-engine/src/: animation.rs  bake_worker.rs  camera.rs  command.rs  component_registry.rs  components.rs  engine.rs  environment.rs  file_watcher.rs  gameplay_loader.rs  gizmo.rs  import_profile.rs  import_worker.rs  inspector.rs  lib.rs  material_library.rs  play_mode.rs  procedural_snapshot.rs  profiling.rs  project.rs  recent_projects.rs  render_frame.rs  render_worker.rs  scaffold.rs  scene_io.rs  scene_sync.rs  snapshot.rs  viewport.rs  wireframe_builders.rs
crates/rkp-engine/tests/: material_shader_params.rs  material_shader_resolution.rs
crates/rkp-gameplay/: Cargo.toml
crates/rkp-gameplay/src/: components.rs  lib.rs
crates/rkp-import/: Cargo.toml
crates/rkp-import/src/: config.rs  error.rs  lib.rs  normalize.rs
crates/rkp-import/tests/: fbx_skinning.rs  pipeline.rs
crates/rkp-procedural/: Cargo.toml
crates/rkp-procedural/src/: arena.rs  bounds.rs  combine.rs  evaluate.rs  flatten.rs  leaves.rs  lib.rs  node_kind.rs  noise.rs  sample.rs
crates/rkp-render/: ARCHITECTURE.md  Cargo.toml  build.rs
crates/rkp-render/examples/: proc_surface_nets_spike.rs
crates/rkp-render/src/: bloom.rs  bloom_composite.rs  brush_state_pass.rs  context.rs  gbuffer.rs  gpu_profiler.rs  instance_composite_pass.rs  instance_march_pass.rs  instance_merged_gbuffer.rs  instance_proto.rs  instance_proto_lookup.rs  instance_tile_index.rs  instance_tile_index_gpu.rs  lib.rs  mesh_glass_pass.rs  mesh_glass_shadow_pass.rs  mesh_lod_select_pass.rs  mesh_pool.rs  mesh_proxy_pass.rs  mesh_resolve_pass.rs  mesh_shadow_map_pass.rs  octree_gpu.rs  octree_march.rs  opacity_volume.rs  paint.rs  proc_ghost.rs  proc_outline.rs  proc_raymarch.rs  proc_sample.rs  proc_surface_nets.rs  rkp_atmosphere.rs  rkp_glass.rs  rkp_god_rays.rs  rkp_gpu_object.rs  rkp_grid.rs  rkp_renderer.rs  rkp_scene.rs  rkp_scene_manager.rs  rkp_shade.rs  rkp_shadow_ao.rs  (+31 more)
crates/rkp-render/tests/: affine_inverse_oracle.rs  example_grass_shader.rs  gpu_evaluator.rs  gpu_layout_contracts.rs  instance_at_compose.rs  instance_at_splice_consumers.rs  instance_overlay_empty.rs  instance_overlay_full_chain.rs  march_shaders_validate.rs  paint_per_instance_overlay.rs  shade_compose.rs  shadow_map_march.rs  shadow_tile_mark.rs  splat_extract_real_asset.rs  splat_render_real_asset.rs  tlas_assemble.rs  tlas_karras.rs  tlas_morton_sort.rs  (+8 more)
crates/rkp-runtime/: Cargo.toml
crates/rkp-testbed/: Cargo.toml
(+617 files in other folders)
