[workspace]
resolver = "2"
members = [
    "crates/arvx-core",
    "crates/arvx-render",
    "crates/arvx-convert",
    "crates/arvx-runtime",
    "crates/arvx-editor",
    "crates/arvx-testbed", "crates/arvx-engine",
    "crates/arvx-macros",
    "crates/arvx-procedural",
    "crates/arvx-import",
    "crates/arvx-animation",
    "crates/arvx-physics",
    "crates/arvx-terrain",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeleaver/arrvox"

[workspace.dependencies]
# Internal crates
arvx-core = { path = "crates/arvx-core" }
arvx-render = { path = "crates/arvx-render" }
arvx-convert = { path = "crates/arvx-convert" }
arvx-runtime = { path = "crates/arvx-runtime" }
arvx-engine = { path = "crates/arvx-engine" }
arvx-macros = { path = "crates/arvx-macros" }
arvx-procedural = { path = "crates/arvx-procedural" }
arvx-import = { path = "crates/arvx-import" }
arvx-animation = { path = "crates/arvx-animation" }
arvx-physics = { path = "crates/arvx-physics" }
arvx-terrain = { path = "crates/arvx-terrain" }

# External dependencies (versions match RKIField)
wgpu = "29"
naga = { version = "29", features = ["wgsl-in"] }
wesl = "0.3"
wgpu-profiler = "0.27"
winit = "0.31.0-beta.2"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
encase = { version = "0.10", features = ["glam"] }
hecs = "0.10"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
anyhow = "1"
half = { version = "2", features = ["bytemuck"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
rayon = "1"
pollster = "0.4"
ron = "0.8"
gilrs = "0.11"
gltf = { version = "1", features = ["KHR_texture_transform"] }
tobj = "4"
ufbx = "0.10"
crossbeam = "0.8"
arc-swap = "1.7"
rustc-hash = "2"
inventory = "0.3"
rapier3d = "0.32"
meshopt = "0.6"

# Rinch dependencies (same sources as RKIField)
rinch = { git = "ssh://git@github.com/joeleaver/rinch.git", default-features = false }
rinch-core = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-macros = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-renderer = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-theme = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-components = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-tabler-icons = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-dom = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editor = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editor-macros = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-platform = { git = "ssh://git@github.com/joeleaver/rinch.git" }

# Rinch external deps
anyrender = "0.7"
anyrender_vello = "0.7"
