[package]
name = "arvx-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arvx-core = { workspace = true }
arvx-procedural = { workspace = true }
arvx-render = { workspace = true }
arvx-import = { workspace = true }
arvx-runtime = { workspace = true }
arvx-physics = { workspace = true }
arvx-animation = { workspace = true }
arvx-terrain = { workspace = true }
rapier3d = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
hecs = { workspace = true }
crossbeam = "0.8"
arc-swap = { workspace = true }
notify = "7"
serde = { workspace = true }
serde_json = { workspace = true }
inventory = { workspace = true }
arvx-macros = { workspace = true }
libloading = "0.8"
dirs = "6"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
