[package]
name = "rkp-animation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Skeletal animation and blend shapes for the RKIPatch sparse voxel engine"

[dependencies]
rkp-core = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ron = "0.8"
