[package]
name = "rkp-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mesh-to-.rkp CLI: runs the rkp-import pipeline from the command line"

[dependencies]
rkp-import = { workspace = true }
rkp-core = { workspace = true }
clap = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
