[package]
name = "rkp-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RKIPatch editor — gaussian splat scene editor, thin wrapper over rkf-editor"

[dependencies]
rkp-render = { workspace = true }
rkf-render = { workspace = true }
rkf-editor = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
