[package]
name = "rkp-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RKIPatch editor — gaussian splat scene editor, thin client over RkpEngine"

[dependencies]
rkp-engine = { workspace = true }
rkp-render = { workspace = true }
rkp-runtime = { workspace = true }
rinch = { workspace = true, features = ["desktop", "gpu", "components", "theme"] }
rinch-tabler-icons = { workspace = true }
rfd = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
uuid = { version = "1", features = ["v4"] }
crossbeam = "0.8"
log = { workspace = true }
env_logger = { workspace = true }
