[package]
name = "rkp-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rkp-core = { workspace = true }
rkp-procedural = { workspace = true }
rkp-render = { workspace = true }
rkp-import = { workspace = true }
rkp-runtime = { workspace = true }
rkp-physics = { workspace = true }
rkp-animation = { workspace = true }
rapier3d = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
hecs = { workspace = true }
crossbeam = "0.8"
arc-swap = { workspace = true }
notify = "7"
serde = { workspace = true }
serde_json = { workspace = true }
inventory = { workspace = true }
rkp-macros = { workspace = true }
libloading = "0.8"
dirs = "6"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
