[package]
name = "rkp-gameplay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rkp-engine = { workspace = true }
rkp-macros = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hecs = { workspace = true }
inventory = { workspace = true }
