[package]
name = "rkp-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mesh-to-.rkp import pipeline: load, BVH, bake opacity-octree assets"

[dependencies]
rkp-core = { workspace = true }
rkf-core = { workspace = true }
rkf-animation = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
gltf = { workspace = true }
tobj = { workspace = true }
ufbx = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
