[package]
name = "rkp-procedural"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural object system: arena-based node trees, evaluation, adaptive voxelization"

[dependencies]
rkf-core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
smallvec = "1"

[dev-dependencies]
approx = "0.5"
