[package]
name = "rkp-procedural"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural object system: arena-based node trees, evaluation, adaptive voxelization"

[dependencies]
rkf-core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
smallvec = "1"
# `flatten.rs` emits `ProcInstruction` as a `Pod`/`Zeroable` struct for
# zero-copy upload to the GPU raymarch pass.
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5"
