[package]
name = "rkp-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Splat rendering pipeline: opacity-field march to G-buffer, orchestrating rkf-render for shading and post-process"

[dependencies]
rkp-core = { workspace = true }
rkf-render = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }
half = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }
wgpu-profiler = { workspace = true }
naga = { workspace = true }
