[package]
name = "rkp-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Engine runtime: frame scheduling, ECS glue, streaming, asset management"

[dependencies]
rkp-core = { workspace = true }
rkp-render = { workspace = true }
rkf-animation = { workspace = true }
rkf-physics = { workspace = true }
rkf-mcp = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
pollster = { workspace = true }
